<resources>
    <string name="app_name">Eskapader_Android</string>
    <string name="opprettBrukerLink"> <u>Har du ikke bruker? Trykk her for å opprette </u> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sangtekst1">Is this the real life? Is this just fantasy?</string>
    <string name="sangtekst2">There is a house in New Orleans</string>

    <string name="musAltTekst1_1">Imagine, John lennon</string>
    <string name="musAltTekst1_2">Rocket Man, Elton John</string>
    <string name="musAltTekst1_3">Bohemian Rhapsody, Queen</string>
    <string name="musAltTekst1_4">Piano Man, Billy Idol</string>

    <string name="musAltTekst2_1">Paranoid, Black Sabbath</string>
    <string name="musAltTekst2_2">House of the Rising Sun, The Animals</string>
    <string name="musAltTekst2_3">Lose Yourself, Eminem</string>
    <string name="musAltTekst2_4">Stronger, Kanye West</string>


    <string name="dilemmatekst1_1">Aldri vaske håret</string>
    <string name="dilemmatekst1_2">Aldri pusse tennene</string>

    <string name="dilemmatekst2_1">Kropp dekket av pels</string>
    <string name="dilemmatekst2_2">Kropp dekket av fiskeskall</string>
    <string name="min_side">Min Side</string>
    <string name="her_skal_musikkquiz_opprettes">Her skal musikkquiz opprettes!</string>

    <string-array name="språk">
        <item>Norsk</item>
        <item>Engelsk</item>
        <item>Spansk</item>
        <item>Arabic</item>
    </string-array>

</resources>