<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusikkQuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4362B5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sangtekst"
            android:layout_width="223dp"
            android:layout_height="172dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:baselineAligned="false"
            android:bottomLeftRadius="7dp"
            android:bottomRightRadius="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:radius="12dp"
            android:text="@string/sangtekst1"
            android:textColor="#f5f5f5"
            android:textSize="30sp"
            android:topLeftRadius="7dp"
            android:topRightRadius="7dp"
           />

        <TextView
            android:id="@+id/musAlt1"
            android:layout_width="344dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/rounded_corner_view"
            android:bottomLeftRadius="7dp"
            android:bottomRightRadius="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:radius="3dp"
            android:text="@string/musAltTekst1_1"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:topLeftRadius="7dp"
            android:topRightRadius="7dp"
          />

        <TextView
            android:id="@+id/musAlt2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/rounded_corner_view"
            android:bottomLeftRadius="7dp"
            android:bottomRightRadius="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:radius="12dp"
            android:text="@string/musAltTekst1_2"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:topLeftRadius="7dp"
            android:topRightRadius="7dp"
            />

        <TextView
            android:id="@+id/musAlt4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/rounded_corner_view"
            android:bottomLeftRadius="7dp"
            android:bottomRightRadius="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:radius="12dp"
            android:text="@string/musAltTekst1_4"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:topLeftRadius="7dp"
            android:topRightRadius="7dp"
            />

        <TextView
            android:id="@+id/musAlt3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_view"
            android:bottomLeftRadius="7dp"
            android:bottomRightRadius="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:radius="12dp"
            android:text="@string/musAltTekst1_3"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:topLeftRadius="7dp"
            android:topRightRadius="7dp"
          />

        <Button
            android:id="@+id/btBekreft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="@android:color/white"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:radius="8dp"
            android:text="Bekreft"
            android:textColor="@android:color/black"
            android:textSize="20sp"
           />

    </LinearLayout>
</FrameLayout>

</layout>